--- a/.env
+++ b/.env
@@ -25,11 +25,11 @@ AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
 UI_TITLE=
-UI_LOGO=
-UI_CHAT_LOGO=
+UI_LOGO=frontend/public/gmcc-logo.svg
+UI_CHAT_LOGO=frontend/public/gmcc-chat-logo.jpg
 UI_CHAT_TITLE=
 UI_CHAT_DESCRIPTION=
-UI_FAVICON=
+UI_FAVICON=frontend/public/favicon.ico
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
